EPRINTS-3.1.0-rc-6
======================================================================

2008-08-20 tdb
 * input_rows is specific to certain field types

2008-09-08 cjg
 * added srand to improve randomness of login cookies.

======================================================================
EPRINTS-3.1.0
======================================================================

2008-09-10 cjg
 * Tweaked search so that a search with the only parameter being screen=
    still counts as not-filled-in rather than defaulting to action=search.
    Fixing #3431
 * Made change to Sword deposit to handle a change in the way CGI.pm > 3.15
    does post data. Fixing #3430
 * Fixed issue with view-by-name not making the actual names appear on the 
    menu page. This was due to it ending up looking up HASH(0x£@*&£$) in 
    the sizes hash.

2008-09-15 tdb
 * Added get_primary_key() for MySQL by using DESCRIBE
 * Further fix for linking creators to browse views

2008-10-14 cjg
 * Added javascript constants to the top of auto.js for things like the base
    URL path. This fixes issues with the image path in the lightbox code.

2008-10-14 cjg
 * Added "Navigation Aids" to the sub-menus in views in addition to the leaf
    pages.
 * Correctly set /view files to be utf-8 to fix "wide character" warnings.
 * Fixed navigation aids to correctly link to subjects in a sub-menu, which
    required a new mode (4) to $session->render_subjects
 * Added code to generate_views to report an error if an illegal view id is
    passed as an option.
 * Added warning to Subjects about subjects with non-existant parents.
 * Added "root" subject to Subject->get_all
 * Added "up a level" to browsing multi level views.

2008-10-14 cjg
 * Fixed minor bug in Component::Upload which prevented it working with zero
    fields from the document.

======================================================================
EPRINTS-3.1.1
======================================================================